@@ -104,6 +104,13 @@ from C<VARCHAR> to C<TEXT>, since some folks will have field types with names
 and key names longer than 32 characters. Reported by Nate Perry-Thistle.
 [David]
 
+=item *
+
+Created two new make targets, "install_files" and "install_db", to allow 
+the files to be installed without doing anything with the database.  Useful 
+for packagers who need to let the user create the database on her own.  
+"make install_files install_db" is equivalent to "make install". [Marshall]
+
 =back
 
 =head2 Bug Fixes
